--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,20 +20,21 @@
                 <p class="text-secondary">친구들의 목표와 인증샷을 보려면 가입하세요</p>
                 <button class="btn btn-primary btn-block">Facebook으로 로그인</button>
                 <hr>
-                <form action="">
+                <form action="{% url 'members:signup' %}" method="POST">
+                    {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="휴대폰 번호 또는 이메일 주소">
+                        <input name="email" type="email" class="form-control" placeholder="이메일 주소">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="성명">
+                        <input name="name" type="text" class="form-control" placeholder="성명">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="사용자 이름">
+                        <input name="username" type="text" class="form-control" placeholder="사용자 이름">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="비밀번호">
+                        <input name="password" type="password" class="form-control" placeholder="비밀번호">
                     </div>
-                    <button class="btn btn-primary btn-block">가입</button>
+                    <button type="submit" class="btn btn-primary btn-block">가입</button>
                 </form>
                 <p class="text-secondary">가입하면 zaksim의 약관 데이터 정책 및 쿠키 정책에 동의하게 됩니다</p>
             </div>
