--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../static/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css'%}">
     <script src="../static/bootstrap/bootstrap.bundle.js" type="javascript"></script>
     <title>zaksim</title>
     {% block head %}{% endblock %}
